<resources>
    <string name="app_name">NEAR education App</string>
    <string name="login_bienvenida">BIENVENIDO</string>
    <string name="login_correo">Correo electronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_boton">Iniciar sesion</string>
    <string name="login_recuperar">Recuperar cuenta</string>
    <string name="login_registrar">REGISTRARSE</string>

    <string name="registrar_texto">REGISTRO</string>
    <string name="registrar_nombre">Nombre</string>
    <string name="registrar_correo">Correo electronico</string>
    <string name="registrar_password">Contrasena</string>
    <string name="registrar_boton">Registrarse</string>

    <string name="recuperar_text">RECUPERAR CUENTA</string>
    <string name="recuperar_correo">Correo asociado</string>
    <string name="recuperar_boton">Recuperar</string>


    <string name="menu_navegacion_inicio">Inicio</string>
    <string name="menu_navegacion_path">Path</string>
    <string name="menu_navegacion_snippets">Snippets</string>
    <string name="menu_navegacion_lecciones">Lecciones</string>
    <string name="menu_navegacion_test">Test</string>
    <string name="menu_navegacion_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="test">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like) It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like) It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)</string>
    <string name="prefs_file">com.near.educationapp.PREFERENCE_FILE_KEY</string>
    <string name="test1">Felicidades has \n concluido la prueba</string>
</resources>