<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="20dp"
    tools:context=".RecuperarActivity">


    <ImageView
        android:id="@+id/nearlogo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/near_splash_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/recuperar_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recuperar_text"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearlogo"
        android:textSize="20sp"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500_texto"

        android:layout_marginTop="216dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recuperar_texto">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recuperar_texto_campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recuperar_correo"
            android:textColorHint="@color/blanco"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/recuperar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/recuperar_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recuperar"
        android:background="@color/fondo"
        android:textColor="@color/purple_500"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>