<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fondo"
            android:padding="20dp"
            tools:context=".LogInActivity">


            <ImageView
                android:id="@+id/logo_near_login"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:src="@drawable/near_spash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_bienvenida"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_near_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_correo"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:background="@color/fondo_oscuro"
                android:textColorHint="@color/fondo_oscuro_texto"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_msg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_correo_texto"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_correo"
                    android:inputType="text"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/fondo_oscuro_texto"
                    android:textColorHighlight="@color/purple_500"
                    android:textSize="@dimen/text_size_m" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/fondo_oscuro"
                android:textColorHint="@color/fondo_oscuro_texto"
                app:backgroundTint="@color/purple_500"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_correo">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_texto"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/fondo_oscuro_texto"
                    android:textColorHighlight="@color/purple_500"
                    android:textSize="@dimen/text_size_m" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/iniciar_sesion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="@color/purple_500"
                android:elevation="16dp"
                android:text="@string/login_boton"
                android:textColor="@color/blanco"
                android:textSize="@dimen/text_size_m"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/recuperar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="40dp"
                android:text="@string/login_recuperar"
                android:textColor="@color/fondo_oscuro_texto"
                android:textSize="@dimen/text_size_m"

                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion" />

            <TextView
                android:id="@+id/registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                android:text="@string/login_registrar"
                android:textColor="@color/fondo_oscuro_texto"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>