<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        android:padding="20dp"
        tools:context=".RegistrarActivity">


        <ImageView
            android:id="@+id/logo_near"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/near_splash_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registrar_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/registrar_texto"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_near" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/purple_500_texto"
            android:textColorHint="@color/blanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrar_texto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrar_nombre_campo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrar_nombre"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/blanco" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrar_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/purple_500_texto"
            android:textColorHint="@color/blanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrar_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrar_correo_campo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrar_correo"
                android:textColorHint="@color/blanco"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registro_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/purple_500_texto"
            android:textColorHint="@color/blanco"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrar_correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrar_password_campo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrar_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/blanco" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registrar_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/fondo"
            android:text="@string/registrar_boton"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registro_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
